--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -10,14 +10,6 @@
     width: 22rem;
 }
 
-.form-signin input[type="email"] {
+.form-signin  {
     margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-}
-
-.form-signin input[type="password"] {
-    margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
 }
